--- a/ui/newadd.ui
+++ b/ui/newadd.ui
@@ -2,13 +2,8 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>521</width>
-    <height>850</height>
-   </rect>
+  <property name="enabled">
+   <bool>true</bool>
   </property>
   <property name="minimumSize">
    <size>
@@ -18,7 +13,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>520</width>
+    <width>521</width>
     <height>850</height>
    </size>
   </property>
