--- a/ui/newupload.ui
+++ b/ui/newupload.ui
@@ -2,15 +2,23 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>520</width>
+    <height>850</height>
+   </rect>
+  </property>
   <property name="minimumSize">
    <size>
-    <width>521</width>
+    <width>520</width>
     <height>850</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>521</width>
+    <width>520</width>
     <height>850</height>
    </size>
   </property>
