--- a/ui/account.ui
+++ b/ui/account.ui
@@ -1230,7 +1230,7 @@ color: rgb(199, 218, 186);</string>
      <locale language="Latvian" country="Latvia"/>
     </property>
     <property name="text">
-     <string>5</string>
+     <string/>
     </property>
     <property name="wordWrap">
      <bool>false</bool>
