--- a/ui/collection.ui
+++ b/ui/collection.ui
@@ -740,10 +740,22 @@ background-color: rgb(66, 88, 56);</string>
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>160</y>
+      <y>150</y>
       <width>461</width>
       <height>661</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>461</width>
+      <height>661</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>461</width>
+      <height>661</height>
+     </size>
     </property>
     <property name="palette">
      <palette>
@@ -769,9 +781,9 @@ background-color: rgb(66, 88, 56);</string>
        <colorrole role="Text">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>56</red>
-          <green>67</green>
-          <blue>56</blue>
+          <red>199</red>
+          <green>218</green>
+          <blue>186</blue>
          </color>
         </brush>
        </colorrole>
@@ -805,9 +817,9 @@ background-color: rgb(66, 88, 56);</string>
        <colorrole role="HighlightedText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>56</red>
-          <green>67</green>
-          <blue>56</blue>
+          <red>199</red>
+          <green>218</green>
+          <blue>186</blue>
          </color>
         </brush>
        </colorrole>
@@ -852,9 +864,9 @@ background-color: rgb(66, 88, 56);</string>
        <colorrole role="Text">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>56</red>
-          <green>67</green>
-          <blue>56</blue>
+          <red>199</red>
+          <green>218</green>
+          <blue>186</blue>
          </color>
         </brush>
        </colorrole>
@@ -888,9 +900,9 @@ background-color: rgb(66, 88, 56);</string>
        <colorrole role="HighlightedText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>56</red>
-          <green>67</green>
-          <blue>56</blue>
+          <red>199</red>
+          <green>218</green>
+          <blue>186</blue>
          </color>
         </brush>
        </colorrole>
@@ -971,9 +983,9 @@ background-color: rgb(66, 88, 56);</string>
        <colorrole role="HighlightedText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>56</red>
-          <green>67</green>
-          <blue>56</blue>
+          <red>199</red>
+          <green>218</green>
+          <blue>186</blue>
          </color>
         </brush>
        </colorrole>
@@ -1003,6 +1015,45 @@ background-color: rgb(66, 88, 56);</string>
       <family>OCR A Extended</family>
       <pointsize>12</pointsize>
      </font>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="deletebutton">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>110</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>1</width>
+      <height>1</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>171</width>
+      <height>71</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Comic Sans MS</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 10px;
+background-color: rgb(170, 0, 0);
+color: rgb(199, 218, 186);</string>
+    </property>
+    <property name="locale">
+     <locale language="Latvian" country="Latvia"/>
+    </property>
+    <property name="text">
+     <string>Dzēst</string>
     </property>
    </widget>
   </widget>
