--- a/ui/news.ui
+++ b/ui/news.ui
@@ -53,9 +53,9 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>72</red>
-          <green>108</green>
-          <blue>64</blue>
+          <red>9</red>
+          <green>46</green>
+          <blue>33</blue>
          </color>
         </brush>
        </colorrole>
@@ -118,9 +118,9 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>72</red>
-          <green>108</green>
-          <blue>64</blue>
+          <red>9</red>
+          <green>46</green>
+          <blue>33</blue>
          </color>
         </brush>
        </colorrole>
@@ -183,9 +183,9 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>72</red>
-          <green>108</green>
-          <blue>64</blue>
+          <red>9</red>
+          <green>46</green>
+          <blue>33</blue>
          </color>
         </brush>
        </colorrole>
@@ -869,19 +869,19 @@ color: rgb(199, 218, 186);</string>
       <x>130</x>
       <y>660</y>
       <width>261</width>
-      <height>71</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>151</width>
-      <height>41</height>
+      <width>261</width>
+      <height>51</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>6666</width>
-      <height>66666</height>
+      <width>261</width>
+      <height>51</height>
      </size>
     </property>
     <property name="palette">
@@ -1080,7 +1080,7 @@ color: rgb(199, 218, 186);</string>
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>760</y>
+      <y>770</y>
       <width>401</width>
       <height>41</height>
      </rect>
@@ -1291,6 +1291,45 @@ color: rgb(181, 229, 4);</string>
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="deletebutton">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>720</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>141</width>
+      <height>31</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>141</width>
+      <height>31</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Comic Sans MS</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 10px;
+background-color: rgb(170, 0, 0);
+color: rgb(199, 218, 186);</string>
+    </property>
+    <property name="locale">
+     <locale language="Latvian" country="Latvia"/>
+    </property>
+    <property name="text">
+     <string>Dzēst pēdējo</string>
     </property>
    </widget>
   </widget>
